# formatn

./: .ghc.environment.aarch64-darwin-9.14.1  .gitignore  .hlint.yaml  ChangeLog.md  cabal.project  formatn.cabal  formatn.org  hie.yaml  readme.md  readme.org  stack.yaml
.github/workflows/: haskell-ci.yml
docs/: doctest-parallel-restoration.md
src/Data/: FormatN.hs
test/: doctests.hs  test.hs
