cabal-version:  2.4
name:           formatn
version:        0.1.0
synopsis:       Number text formatting.
description:    This package provides support for common number formatting patterns.
    .
    == Usage
    .
    > import Data.FormatN
    .
    See doctests for functionality and range.

category:       Development
homepage:       https://github.com/tonyday567/formatn#readme
bug-reports:    https://github.com/tonyday567/formatn/issues
author:         Tony Day
maintainer:     tonyday567@gmail.com
copyright:      2016 Tony Day
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple

source-repository head
  type: git
  location: https://github.com/tonyday567/formatn

library
  hs-source-dirs:
    src
  default-extensions:
  ghc-options:
    -Wall
    -Wcompat
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wredundant-constraints
    -fwrite-ide-info
    -hiedir=.hie
    -Wunused-packages
  build-depends:
    base >=4.7 && <5,
    containers ^>= 0.6,
    generic-lens >= 1.2 && < 3.0,
    numhask ^>= 0.8,
    scientific ^>= 0.3,
    text ^>= 1.2,
  exposed-modules:
    Data.FormatN
  other-modules:
  default-language: Haskell2010
