cabal-version: 3.0
name: formatn
version: 0.3.1.1
license: BSD-3-Clause
license-file: LICENSE
copyright: Tony Day (c) 2016
category: text
author: Tony Day
maintainer: tonyday567@gmail.com
homepage: https://github.com/tonyday567/formatn#readme
bug-reports: https://github.com/tonyday567/formatn/issues
synopsis: Formatting of doubles.
description:
  This package provides support for number formatting styles, especially styles involving significant figure calculations.

  == Usage

  >>> import Data.FormatN
  >>> comma (Just 3) 1234
  1,230

build-type: Simple
tested-with:
  ghc ==9.6.7
  ghc ==9.8.4
  ghc ==9.10.2
  ghc ==9.12.2

extra-doc-files:
  ChangeLog.md
  readme.md

source-repository head
  type: git
  location: https://github.com/tonyday567/formatn

common ghc-options-stanza
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wpartial-fields
    -Wredundant-constraints

common ghc2024-additions
  default-extensions:
    DataKinds
    DerivingStrategies
    DisambiguateRecordFields
    ExplicitNamespaces
    GADTs
    LambdaCase
    MonoLocalBinds
    RoleAnnotations

common ghc2024-stanza
  if impl(ghc >=9.10)
    default-language:
      GHC2024
  else
    import: ghc2024-additions
    default-language:
      GHC2021

library
  import: ghc-options-stanza
  import: ghc2024-stanza
  hs-source-dirs: src
  build-depends:
    base >=4.14 && <5,
    containers >=0.6 && <0.9,
    text >=1.2 && <2.2,

  exposed-modules: Data.FormatN

test-suite doctests
  import: ghc2024-stanza
  main-is: doctests.hs
  hs-source-dirs: test
  build-depends:
    QuickCheck >=2.14.2 && <2.17,
    base >=4.14 && <5,
    doctest-parallel >=0.3 && <0.5,

  ghc-options: -threaded
  type: exitcode-stdio-1.0
