cabal-version: 3.0
name: formatn
version: 0.3.3.1
license: BSD-3-Clause
license-file: LICENSE
copyright: Tony Day (c) 2016
category: text
author: Tony Day
maintainer: tonyday567@gmail.com
homepage: https://github.com/tonyday567/formatn#readme
bug-reports: https://github.com/tonyday567/formatn/issues
synopsis: Formatting of doubles.
description:
  This package provides support for number formatting styles, especially styles involving significant figure calculations.

  == Usage

  >>> import Data.FormatN
  >>> comma (Just 3) 1234
  1,230

build-type: Simple
tested-with:
  ghc ==9.10.3
  ghc ==9.12.2
  ghc ==9.14.1

extra-doc-files:
  ChangeLog.md
  readme.md

source-repository head
  type: git
  location: https://github.com/tonyday567/formatn

common ghc-options-stanza
  ghc-options:
    -Wall
    -Wcompat
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wredundant-constraints

library
  import: ghc-options-stanza
  default-language: GHC2024
  hs-source-dirs: src
  build-depends:
    base >=4.14 && <5,
    containers >=0.6 && <0.9,
    text >=1.2 && <2.2,

  exposed-modules: Data.FormatN

